Naprawiono kolory oraz dodano rysowanie linii BUG z "z-index na minusie"

--- a/style.css
+++ b/style.css
@@ -125,6 +125,21 @@ input[type="list"] {
     font-family: FreeMono, monospace;
 }
 
+input[class="color"], #colorPalette {
+    color: transparent;
+    -webkit-appearance: none;
+    border: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(169, 169, 169);
+    border-image: initial;
+    padding: 1px 2px;
+    content: "";
+}
+
 input[type="color"] {
     -webkit-appearance: none;
     border: none;
